force-app/main/default/objects/App_Summary_Config__mdt/App_Summary_Config__mdt.object-meta.xml
<CustomObject>
    <description>This metadata is used to store application summary sections and subsections</description>
    <label>App Summary Config</label>
    <pluralLabel>App Summary Configs</pluralLabel>
</CustomObject>