force-app/main/default/objects/App_Summary_Config__mdt/fields/Applicable_Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Program_Code__c</fullName>
    <description>This field is used to store applicable Program code  for each section on Application Summary</description>
    <label>Applicable Program Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>