force-app/main/default/objects/App_Summary_Config__mdt/fields/Based_On_Individual__c.field-meta.xml
<CustomField>
    <fullName>Based_On_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to determine if the section is based on Individual or not</description>
    <label>Based On Individual</label>
    <type>Checkbox</type>
</CustomField>