force-app/main/default/objects/App_Summary_Config__mdt/fields/IsFlow__c.field-meta.xml
<CustomField>
    <fullName>IsFlow__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Flow?</label>
    <type>Checkbox</type>
</CustomField>