force-app/main/default/objects/App_Summary_Config__mdt/fields/Member_Filter__c.field-meta.xml
<CustomField>
    <fullName>Member_Filter__c</fullName>
    <label>Member Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>