force-app/main/default/objects/App_Summary_Config__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>This field is used to store display name of the sections to be displayed on Application Summary</description>
    <label>Section Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>