force-app/main/default/objects/App_Summary_Config__mdt/fields/Section_Key__c.field-meta.xml
<CustomField>
    <fullName>Section_Key__c</fullName>
    <label>Section Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>