force-app/main/default/objects/App_Summary_Config__mdt/fields/Subsection__c.field-meta.xml
<CustomField>
    <fullName>Subsection__c</fullName>
    <description>This field is used to store Sub sections of Sections in Application Summary</description>
    <label>Subsection Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>