force-app/main/default/objects/App_Summary_Config__mdt/listViews/Config_View.listView-meta.xml
<ListView>
    <fullName>Config_View</fullName>
    <columns>MasterLabel</columns>
    <columns>Section_Key__c</columns>
    <columns>Subsection__c</columns>
    <columns>PageName__c</columns>
    <columns>FlowName__c</columns>
    <columns>IsFlow__c</columns>
    <columns>Based_On_Individual__c</columns>
    <columns>Order__c</columns>
    <columns>Applicable_Program_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Config View</label>
    <language>en_US</language>
</ListView>