force-app/main/default/objects/App_Summary_Config__mdt/listViews/RAC_View.listView-meta.xml
<ListView>
    <fullName>RAC_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FlowName__c</columns>
    <columns>Based_On_Individual__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>RAC View</label>
    <language>en_US</language>
</ListView>